--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Casa comigo?</title>
 </head>
 <body>
-    
+    <section>
+        <h1>Quer casar comigo?</h1>
+        <div>
+            <button class="sim">Sim</button>
+            <button class="nao">Nao</button>
+        </div>
+    </section>
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
