--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Casa comigo?</title>
-</head>
-<body>
+  </head>
+  <body>
     <section>
-        <h1>Quer casar comigo?</h1>
+      <h1>Quer casar comigo?</h1>
+      <div class="buttons">
         <div>
-            <button class="sim">Sim</button>
-            <button class="nao">Nao</button>
+          <button class="sim">Sim</button>
         </div>
+        <div>
+          <button class="nao">Nao</button>
+        </div>
+      </div>
     </section>
     <script src="assets/js/index.js"></script>
-</body>
+  </body>
 </html>
