--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section>
       <h1>Quer casar comigo?</h1>
       <div class="buttons">
-        <div>
+        <div class="botao-sim">
           <button class="sim">Sim</button>
         </div>
-        <div>
+        <div class="botao-nao">
           <button class="nao">Nao</button>
         </div>
       </div>
