chore: modal add

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <title>Casa comigo?</title>
   </head>
   <body>
-    <section>
-      <h1>Quer casar comigo?</h1>
-      <div class="buttons">
-        <div class="botao-sim">
-          <button class="sim">Sim</button>
-        </div>
-        <div class="botao-nao">
-          <button class="nao">Nao</button>
+    <section class="container">
+      <div>
+        <h1>Quer casar comigo?</h1>
+        <div class="buttons">
+          <div class="botao-sim">
+            <button class="sim">Sim</button>
+          </div>
+          <div class="botao-nao">
+            <button class="nao">Nao</button>
+          </div>
+          <div class="modal">
+            <button class="close">X</button>
+            <h2>Resposta Correta!</h2>
+          </div>
         </div>
       </div>
     </section>
